# clog

./: Cargo.toml  LICENSE  deep.clog  harsh.clog  readme.md
src/: lib.rs  main.rs
src/backend/: config.rs  mod.rs
src/backend/file_operations/: content.rs  mod.rs  utils.rs
src/backend/header/: init.rs  utils.rs
src/backend/main/: mod.rs
src/backend/metadata/: file.rs  folder.rs  init.rs  metadata.rs  mod.rs
src/backend/user/: mod.rs  user_struct.rs
src/backend/user/utils/: derive_key.rs  generate_keys.rs  mod.rs
