[package]
name = "clog"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
chrono = "0.4.41"
crossterm = "0.29.0"
getrandom = "0.3.2"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
pyo3 = { version = "0.25.0", features = ["extension-module"] }
rand = "0.9.1"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"

[lib]
name = "clog"  
crate-type = ["cdylib"]

[build-dependencies]
pyo3-build-config = "0.25.0"

[package.metadata.pyo3]
generate-stubs = true
