[package]
name = "clog"
version = "0.0.1"
edition = "2024"

[lib]
name = "clog" 
description = "A cryptographically secure content storing library.Providing simple API to create, read and edit file without compromising security."
license = "MIT"

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
chrono = "0.4.41"
getrandom = "0.3.2"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"

[profile.release]
opt-level = 3          
lto = "fat"            
codegen-units = 1      
strip = "symbols"      
