[package]
name = "clog_rs"
version = "0.0.4"
edition = "2024"
description = "A cryptographically secure content storing library. Provides simple APIs to create, read, and edit files without compromising security."
license = "MIT"
authors = ["Deep Gajjar"]
repository = "https://github.com/Levi477/clog"  
readme = "readme.md"                                  
keywords = ["encryption", "journal", "secure", "diary"]
categories = ["cryptography", "text-processing", "data-structures"]
exclude = ["/target", "*.clog"]                        

[lib]
name = "clog_rs"
path = "src/lib.rs"   

[dependencies]
aes-gcm = "0.10.3"
base64 = "0.22.1"
chrono = "0.4.41"
getrandom = "0.3.2"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
